Refactor *OIDCAuthenticationToken